# bitwise-c--operators

./: .gitignore  CMakeLists.txt  README.md
include/: bitwise_utils.h
src/: bitwise_utils.cpp  main.cpp
tests/: test_bitwise.cpp
